<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>md_local_planner</name>
    <version>1.16.7</version>
    <description>

        This package provides an implementation of the Pure Pursuit Approach to
        local robot navigation on a plane.

    </description>
    <author>Jaehyun Lim</author>
    <author>jaehyunlim@yonsei.ac.kr</author>
    <maintainer email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</maintainer>
    <license>BSD</license>
    <url>http://github.com</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>

</package>


